manifests/dev/home-assistant/Namespace-home-assistant.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: home-assistant
