manifests/dev/home-assistant/Deployment-home-assistant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: home-assistant
      app.kubernetes.io/name: home-assistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/name: home-assistant
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: TZ
              value: Etc/UTC
          image: ghcr.io/home-assistant/home-assistant:stable
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 10
          name: home-assistant
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /config
              name: config
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-home-assistant-config
